<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/CLR"
        android:layout_width="262dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/ok"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:background="@android:color/holo_orange_dark"
        android:text="@string/the_selected_color_value"
        android:textColor="@android:color/holo_blue_bright"
        android:textSize="20sp" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="45dp"
        android:layout_marginTop="77dp"
        android:text="@string/cancel" />

    <Button
        android:id="@+id/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/cancel"
        android:layout_marginEnd="57dp"
        android:text="@string/ok" />

</RelativeLayout>
